--- a/src/rails/mobmke-site/app/views/layouts/application.html.erb
+++ b/src/rails/mobmke-site/app/views/layouts/application.html.erb
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>MobmkeSite</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag :application %>
+    <%= csrf_meta_tag %>
+    <%= yield(:head) %>
+  </head>
+  <body>
+  	<div id="header">
+  	<% if user_signed_in? %>
+  	  <li>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+      </li>
+    <% else %>
+      <li>
+        <%= link_to('Login', new_user_session_path)  %>  
+      </li>
+    <% end %>
+  	</div>
+    <div id="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+      <%= content_tag :h1, yield(:title) if show_title? %>
+      <%= yield %>
+    </div>
+  </body>
 </html>
