--- a/src/rails/mobmke-site/app/views/meetings/show.html.erb
+++ b/src/rails/mobmke-site/app/views/meetings/show.html.erb
@@ -30,6 +30,7 @@
   <%= @meeting.end_time %>
 </p>
 
-
-<%= link_to 'Edit', edit_meeting_path(@meeting) %> |
+<% if can? :update, @meeting %>
+<%= link_to 'Edit', edit_meeting_path(@meeting) %>
+ | <% end %>
 <%= link_to 'Back', meetings_path %>
