--- a/src/android/res/layout/meeting_item.xml
+++ b/src/android/res/layout/meeting_item.xml
@@ -3,17 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
 	<TextView
-        android:id="@+id/txtStart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+	    android:id="@+id/txtStart"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_color" />
+
  	<TextView
-        android:id="@+id/txtEnd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+ 	    android:id="@+id/txtEnd"
+ 	    android:layout_width="match_parent"
+ 	    android:layout_height="wrap_content"
+ 	    android:textColor="@color/text_color" />
+
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_color" />
  	
 </LinearLayout>
